# TeleScope

./: Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml
app/: main.py  pyproject.toml  tracing_config.py
config/: prometheus.yml  tempo-local.yaml
config/collector/: otel-config.yaml
config/grafana/provisioning/datasources/: prometheus.yaml  tempo.yaml
